--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/mydb
+MONGO_URI=mongodb+srv://prince123:prince123@traning.f0mnga6.mongodb.net/HRAutomation?retryWrites=true&w=majority&appName=traning
 SESSION_SECRET_KEY=MY_SECRET_KEY
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
